Fix search box align issue

--- a/assets/base.scss
+++ b/assets/base.scss
@@ -362,9 +362,9 @@ header {
 #search-container {
   position: fixed;
   z-index: 9999;
-  // left: 0;
-  // top: 0;
-  width: 50vw;
+  left: 0;
+  top: 0;
+  width: 100vw;
   height: 100%;
   overflow: scroll;
   display: none;
@@ -372,7 +372,7 @@ header {
   -webkit-backdrop-filter: blur(4px);
 
   & > div {
-    width: 100%;
+    width: 50%;
     margin-top: 15vh;
     margin-left: auto;
     margin-right: auto;
